--- a/src/components/TaskForm/TaskForm.css
+++ b/src/components/TaskForm/TaskForm.css
@@ -1,12 +1,11 @@
 .taskform {
-    width: 96%;
-    height: 96%;
-    padding: 0.5rem;
+    width: 100%;
+    height: 100%;
+    padding: 0 0.5rem;
     align-items: flex-start;
     justify-content: center;
     display: flex;
     overflow-y: scroll;
-    border: 1px solid #dddddd;
     background-color: #ffffff;
 }
 
