--- a/src/components/mainContentWrapper/ContentWrapper.css
+++ b/src/components/mainContentWrapper/ContentWrapper.css
@@ -1,5 +1,6 @@
 .content-wrapper {
-    margin: 50px auto;
+    margin: 15px auto;
+    margin-bottom: 0;
     display: flex;
     justify-content: space-between;
 }
